--- a/website_sekolah_template (2).html
+++ b/website_sekolah_template (2).html
@@ -1,100 +1,205 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SMA Muhammadiyah Delapan</title>
-  <style>
-    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f5f6fa;color:#333}
-    header{background:#0b5ed7;color:#fff;padding:15px 40px;display:flex;align-items:center;justify-content:space-between}
-    header h1{margin:0;font-size:22px}
-    nav a{color:#fff;margin-left:20px;text-decoration:none;font-weight:500}
-    nav a:hover{text-decoration:underline}
-    .hero{background:url('https://images.unsplash.com/photo-1580582932707-520aed937b7b') center/cover;height:420px;display:flex;align-items:center;justify-content:center;color:white;text-align:center}
-    .hero h2{font-size:42px;background:rgba(0,0,0,0.5);padding:15px 25px;border-radius:8px}
-    .container{padding:40px}
-    .section-title{font-size:26px;margin-bottom:20px;color:#0b5ed7}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px}
-    .card{background:white;border-radius:10px;box-shadow:0 4px 12px rgba(0,0,0,.1);padding:20px}
-    .card h3{margin-top:0}
-    footer{background:#222;color:#ddd;text-align:center;padding:20px;margin-top:40px}
-    footer p{margin:5px 0}
-  </style>
+  <meta charset="UTF-8">
+  <title>Web dari CodePen</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f4f6f8;
+      color: #333
+    }
 
-<header>
-  <h1>SMA Muhammadiyah Delapan</h1>
-  <nav>
-    <a href="#">Beranda</a>
-    <a href="#profil">Profil</a>
-    <a href="#berita">Berita</a>
-    <a href="#ppdb">PPDB</a>
-    <a href="#kontak">Kontak</a>
-  </nav>
-</header>
+    header {
+      background: #0a4fd5;
+      color: #fff;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center
+    }
 
-<section class="hero">
-  <h2>Selamat Datang di Website Resmi<br>SMA Muhammadiyah Delapan</h2>
-</section>
+    header h1 {
+      margin: 0;
+      font-size: 24px
+    }
 
-<section id="profil" class="container">
-  <h2 class="section-title">Profil Sekolah</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Visi</h3>
-      <p>Mewujudkan generasi beriman, berilmu, dan berakhlak mulia.</p>
+    nav a {
+      color: #fff;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: 500
+    }
+
+    nav a:hover {
+      text-decoration: underline
+    }
+
+    .hero {
+      background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('https://i.imgur.com/dFJpqBo.jpeg');
+      background-size: cover;
+      background-position: center;
+      height: 420px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: #fff
+    }
+
+    .hero h2 {
+      font-size: 40px;
+      margin-bottom: 10px
+    }
+
+    .hero p {
+      font-size: 18px
+    }
+
+    section {
+      padding: 60px 40px
+    }
+
+    .title {
+      font-size: 28px;
+      color: #0a4fd5;
+      margin-bottom: 25px
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px
+    }
+
+    .card {
+      background: #fff;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, .1)
+    }
+
+    .card h3 {
+      margin-top: 0
+    }
+
+    footer {
+      background: #222;
+      color: #ddd;
+      text-align: center;
+      padding: 25px
+    }
+  </style>
+</head>
+
+<body>
+
+  <header>
+    <h1>Pemuda Hijrah</h1>
+    <nav>
+      <a href="#">Beranda</a>
+      <a href="#tentang">Tentang</a>
+      <a href="#visi">Visi & Misi</a>
+      <a href="#struktur">Struktur</a>
+      <a href="#kontak">Kontak</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div>
+      <h2>Selamat Datang</h2>
+      <p>Website Resmi Pemuda Hijrah</p>
     </div>
-    <div class="card">
-      <h3>Misi</h3>
-      <p>Menyelenggarakan pendidikan berkualitas berbasis nilai Islam.</p>
-    </div>
-    <div class="card">
-      <h3>Kepala Sekolah</h3>
-      <p>Bapak/Ibu Kepala Sekolah</p>
-    </div>
-  </div>
-</section>
+  </section>
 
-<section id="berita" class="container">
-  <h2 class="section-title">Berita Terbaru</h2>
-  <div class="grid">
+  <section id="tentang">
+    <h2 class="title">Tentang Pemuda Hijrah</h2>
     <div class="card">
-      <h3>Kegiatan Pengajian</h3>
-      <p>Kegiatan pengajian rutin siswa dilaksanakan dengan penuh khidmat.</p>
+      <p>Pemuda Hijrah adalah organisasi kepemudaan yang bergerak
+        dalam pembinaan akhlak, keilmuan, dan kepedulian sosial
+        dengan berlandaskan nilai-nilai Islam. Organisasi ini
+        menjadi wadah bagi para pemuda untuk memperbaiki diri,
+        memperkuat iman, serta berhijrah menuju kehidupan yang
+        lebih baik dan bermakna.</p>
     </div>
+  </section>
+
+  <section id="visi">
+    <h2 class="title">Visi & Misi</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Visi</h3>
+        <p>Mewujudkan generasi pemuda yang beriman, berakhlak mulia, berilmu, dan berkontribusi positif bagi masyarakat berdasarkan nilai-nilai Islam.</p>
+      </div>
+      <div class="card">
+        <h3>Misi</h3>
+        <ul>
+          <li>Menanamkan nilai keimanan dan ketakwaan kepada Allah SWT dalam kehidupan pemuda.</li>
+          <li>Membina akhlak dan karakter pemuda agar sesuai dengan ajaran Islam.</li>
+          <li>Menyelenggarakan kegiatan dakwah, kajian, dan pembinaan keislaman yang berkelanjutan.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section id="struktur">
+    <h2 class="title">Anggota</h2>
+    <div class="grid">
+      <div class="card">
+        <h3></h3>
+        <p>Dzakwan</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>Rijell</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>Rifqho</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>Rizie</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>Alif</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>Gerbi</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>Gerald</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>Abi</p>
+      </div>
+      <div class="card">
+        <h3></h3>
+        <p>Daffa</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="kontak">
+    <h2 class="title">Kontak Kami</h2>
     <div class="card">
-      <h3>Prestasi Siswa</h3>
-      <p>Siswa meraih juara lomba tingkat kota.</p>
+      <p>Email: pemudahijrahserua1@gmail.com</p>
+      <p>Telepon: 089585318885</p>
+      <p>Alamat: Jalan Raya Serua No. 101, Kelurahan Serua, Kecamatan Bojongsari, Kota Depok, Jawa Barat 16517</p>
     </div>
-    <div class="card">
-      <h3>Informasi Akademik</h3>
-      <p>Jadwal ujian semester telah diumumkan.</p>
-    </div>
-  </div>
-</section>
+  </section>
 
-<section id="ppdb" class="container">
-  <h2 class="section-title">PPDB Online</h2>
-  <div class="card">
-    <p>Pendaftaran Peserta Didik Baru Tahun Ajaran 2025/2026 telah dibuka.</p>
-    <p><strong>Hubungi:</strong> 08xxxxxxxxxx</p>
-  </div>
-</section>
-
-<section id="kontak" class="container">
-  <h2 class="section-title">Kontak Kami</h2>
-  <div class="card">
-    <p>Alamat: Jl. Pendidikan No. 8</p>
-    <p>Email: info@sekolah.sch.id</p>
-    <p>Telepon: (021) xxxx xxxx</p>
-  </div>
-</section>
-
-<footer>
-  <p>© 2025 SMA Muhammadiyah Delapan</p>
-  <p>Website Resmi Sekolah</p>
-</footer>
+  <footer>
+    <p>© 2025 Pemuda Hijrah</p>
+    <p>Website Profil Pemuda Hijrah</p>
+  </footer>
 
 </body>
+
 </html>
