--- a/website_sekolah_template (2).html
+++ b/website_sekolah_template (2).html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
   <meta charset="UTF-8">
-  <title>Web dari CodePen</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   margin: 0;
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profil Pemuda Hijrah</title>
+  <style>
+    body {
+      margin: 0;
       font-family: Arial, Helvetica, sans-serif;
       background: #f4f6f8;
       color: #333
